// PiQApi.ArchitectureRules/Projects/PiQApi.Abstractions/Diagrams/DomainModels.puml
@startuml PiQApi.Abstractions Domain Models

title PiQApi.Abstractions Domain Models
footer Generated from architectural guides - %date("yyyy.MM.dd")
legend right
  Domain primitives and model relationships
end legend

' Visual styling
skinparam componentStyle uml2
skinparam class {
  BackgroundColor White
  BorderColor Black
}

' Domain Primitives
package "Domain Primitives" {
  class PiQCorrelationId <<value object>> {
    +string Value
    +{static} FromString()
    +ToString()
  }

  class PiQResourceId <<value object>> {
    +string Value
    +{static} FromString()
    +ToString()
  }

  class PiQOperationId <<value object>> {
    +string Value
    +{static} FromString()
    +ToString()
  }

  class PiQMailAddress <<value object>> {
    +string Value
    +{static} FromString()
    +ToString()
  }

  class PiQStorageId <<value object>> {
    +string Value
    +{static} FromString()
    +ToString()
  }
}

' Request/Response Models
package "Request Models" {
  class PiQSendMessageRequest {
    +PiQCorrelationId CorrelationId
    +PiQMailAddress Sender
    +IReadOnlyCollection<PiQMailAddress> Recipients
    +string Subject
    +string Content
  }

  class PiQGetItemRequest {
    +PiQCorrelationId CorrelationId
    +PiQStorageId ItemId
  }
}

package "Response Models" {
  class PiQSendMessageResponse {
    +PiQCorrelationId CorrelationId
    +bool Success
    +PiQStorageId? MessageId
    +IResultError? Error
  }

  class PiQGetItemResponse {
    +PiQCorrelationId CorrelationId
    +bool Success
    +object? Item
    +IResultError? Error
  }
}

' Enums
package "Enums" {
  enum ValidationModeType {
    Standard
    Strict
    Lenient
  }

  enum ValidationSeverityType {
    Error
    Warning
    Info
  }

  enum ServiceOperationStatusType {
    NotStarted
    InProgress
    Completed
    Failed
  }

  enum ResourceStatusType {
    Available
    InUse
    Unavailable
    Failed
  }
}

' Relationships
PiQSendMessageRequest *-- PiQCorrelationId
PiQSendMessageRequest *-- PiQMailAddress
PiQGetItemRequest *-- PiQCorrelationId
PiQGetItemRequest *-- PiQStorageId

PiQSendMessageResponse *-- PiQCorrelationId
PiQSendMessageResponse *-- PiQStorageId
PiQGetItemResponse *-- PiQCorrelationId

@enduml
